domain/force-app/main/default/objects/Contact/fields/New_field_2__c.field-meta.xml
<CustomField>
    <fullName>New_field_2__c</fullName>
    <label>New field 2</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>