domain/force-app/main/default/objects/Contact/fields/New_field__c.field-meta.xml
<CustomField>
    <fullName>New_field__c</fullName>
    <externalId>true</externalId>
    <label>New field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>