domain/force-app/main/default/objects/Contact/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <description>A contact with a MailingPostalCode that has an account and does not match the associated Account ShippingPostalCode should return with a validation error and not be saved</description>
    <errorConditionFormula>IF( ISBLANK( AccountId ) , false ,  MailingPostalCode   &lt;&gt;   Account.ShippingPostalCode )</errorConditionFormula>
    <errorMessage>Postal Code not matched</errorMessage>
</ValidationRule>